<resources>
    <string name="app_name">Traveller</string>
    <string name="map_search_hint">Поиск</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="auth_title">Регистрация</string>
    <string name="login_title">Логин</string>
    <string name="account_title">Аккаунт</string>
    <string name="btn_logout">Выйти</string>
    <string name="title_quest">Войти как гость</string>

    <string name="hint_email">Имя</string>
    <string name="hint_password">Пароль</string>
    <string name="title_subscribe">Подписки</string>
    <string name="list_title">Метки</string>
    <string name="hint_latitude">Широта</string>
    <string name="hint_longitude">Долгота</string>
    <string name="hint_description">Описание</string>
    <string name="spinner_sort">Сортировка</string>

    <string-array name="sortType">
        <item>Нет</item>
        <item>Автор</item>
        <item>Лайки</item>
    </string-array>

</resources>