<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/background_add_mark">

    <ImageButton
        android:id="@+id/btn_add_close"
        android:src="@drawable/ic_close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ImageButton.Primary"/>

    <ImageButton
        android:id="@+id/btn_add_ll"
        android:src="@drawable/ic_done"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ImageButton.Blue"/>

    <EditText
        android:id="@+id/et_add_latitude"
        android:hint="@string/hint_latitude"
        app:layout_constraintTop_toBottomOf="@id/btn_add_ll"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/EditText.AddMark"/>

    <EditText
        android:id="@+id/et_add_longitude"
        android:hint="@string/hint_longitude"
        app:layout_constraintTop_toBottomOf="@id/et_add_latitude"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/EditText.AddMark"/>

    <EditText
        android:id="@+id/et_add_description"
        android:hint="@string/hint_description"
        app:layout_constraintTop_toBottomOf="@id/et_add_longitude"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/EditText.AddMark"/>

</androidx.constraintlayout.widget.ConstraintLayout>