<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimaryContainer"
    tools:context=".presentation.account.AccountFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_account"
        android:layout_width="match_parent"
        app:title="@string/account_title"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_acc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_account"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="username"/>

    <TextView
        android:id="@+id/tv_acc_title_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/title_subscribe"
        app:layout_constraintTop_toBottomOf="@id/tv_acc_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_acc_subscribes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_acc_title_sub"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_subscribe"
        tools:itemCount="5"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:textColor="@color/deep_blue_500"
        android:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>